# vocal_assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml
assistant/: asr.py  audio.py  llm.py  pipeline.py  tts.py  vad.py
