[project]
name = "vocal-assistant"
version = "0.1.0"
description = "Real-time voice assistant: Parakeet ASR → Ollama LLM → Kokoro TTS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nemo_toolkit[asr]",
    "kokoro>=0.9.4",
    "soundfile",
    "sounddevice",
    "ollama",
    "gradio>=4.0",
    "nemo>=7.4.0",
    "matplotlib>=3.10.8",
    "en-core-web-sm",
    "ruff>=0.15.5",
]

[project.scripts]
vocal-assistant = "main:main"
vocal-assistant-ui = "app:demo.launch"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
